@@ -1,7 +1,5 @@
 package com.latticeengines.domain.exposed.datacloud.match;
 
-import java.io.IOException;
-
 import org.testng.Assert;
 import org.testng.annotations.Test;
 
@@ -10,14 +8,14 @@ import com.latticeengines.common.exposed.util.JsonUtils;
 public class MatchStatisticsUnitTestNG {
 
     @Test(groups = "unit")
-    public void testDeSer() throws IOException {
+    public void testDeSer() {
         MatchStatistics statistics = new MatchStatistics();
         statistics.setTimeElapsedInMsec(1234L);
 
         String serializedString = JsonUtils.serialize(statistics);
 
         MatchStatistics deserialized = JsonUtils.deserialize(serializedString, MatchStatistics.class);
-        Assert.assertEquals(deserialized.getTimeElapsedInMsec(), new Long(1234L));
+        Assert.assertEquals(deserialized.getTimeElapsedInMsec(), Long.valueOf(1234L));
     }
 
 }
